# flipperbridge

./: .gitignore  Cargo.toml  README.md
src/: bin.rs  codec.rs  consts.rs  error.rs  lib.rs
src/transport/: ble.rs  mod.rs  serial.rs
