# SPDX-FileCopyrightText: 2022 perillamint
#
# SPDX-License-Identifier: CC0-1.0

[package]
name = "flipper-bridge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
integer-encoding = "3.0"
async-trait = "0.1"
thiserror = "1.0"
tokio-stream = "0.1"
env_logger = "0.9"
log = "0.4"
futures = "0.3"
pin-utils = "0.1"
lazy_static = "1.4"
uuid = "1.1"
async-stream = "0.3"
tokio-util = { version = "0.7", features = ["codec"] }
bytes = "1.2"

btleplug = { version = "0.10", optional = true }
tokio-serial = { version = "5", default-features = false, features = ["rt"], optional = true }
tokio = { version = "1", features = ["full"] }
clap = { version = "3.1", features = ["derive"], optional = true }
pretty-hex = { version = "0.3", optional = true }

[lib]
name = "flipper_bridge"
path = "src/lib.rs"

[features]
default = ["ble", "serial", "pretty-hex"]
build-binary = ["ble", "serial", "clap", "pretty-hex"]
ble = ["btleplug"]
serial = ["tokio-serial"]

[[bin]]
name = "flipperbridge-cli"
path = "src/bin.rs"
